feat: add route to list vaults a user has access to
